[gd_scene load_steps=8 format=3 uid="uid://dew0oa10plr1r"]

[ext_resource type="Texture2D" uid="uid://ctrc2aqacldld" path="res://assets/narrative/kitchen_wide.png" id="1_menoh"]
[ext_resource type="Script" uid="uid://483pvap4ln72" path="res://scenes/narrative_12.gd" id="1_xbxmd"]
[ext_resource type="Texture2D" uid="uid://b2fn5knoj3pmq" path="res://assets/narrative/characters/main_character_two.png" id="3_sb7k0"]
[ext_resource type="Script" uid="uid://cjetl0qsi6j01" path="res://scenes/text_scene_2.gd" id="4_vknrv"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_sn0ci"]
load_path = "res://.godot/imported/kitchen_trippy.png-70f2d008d54711b95573b61d09926fd0.ctex"

[sub_resource type="AnimatedTexture" id="AnimatedTexture_xbxmd"]
frames = 2
frame_0/texture = SubResource("CompressedTexture2D_sn0ci")
frame_1/texture = ExtResource("1_menoh")
frame_1/duration = 1.0

[sub_resource type="CanvasTexture" id="CanvasTexture_bdxuf"]

[node name="NarrativeTwelve" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbxmd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(537.972, 686)
scale = Vector2(1.05084, 0.885417)
texture = SubResource("AnimatedTexture_xbxmd")

[node name="MainCharacter" type="Sprite2D" parent="."]
position = Vector2(241, 970)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_sb7k0")

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -454.0
offset_top = 8.0
offset_right = -414.0
offset_bottom = 48.0
script = ExtResource("4_vknrv")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 530.0
offset_top = 336.0
offset_right = 892.0
offset_bottom = 512.0
texture = SubResource("CanvasTexture_bdxuf")

[node name="Label" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 560.0
offset_top = 349.0
offset_right = 859.0
offset_bottom = 494.0
theme_override_font_sizes/font_size = 32
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="Control"]

[connection signal="timeout" from="Control/Timer" to="Control" method="_on_Timer_timeout"]
