[gd_scene load_steps=9 format=3 uid="uid://clofn22s37ucb"]

[ext_resource type="Script" path="res://scenes/narrative_3.gd" id="1_o6ngg"]
[ext_resource type="Texture2D" uid="uid://ctrc2aqacldld" path="res://assets/narrative/kitchen_wide.png" id="2_bma5j"]
[ext_resource type="Texture2D" uid="uid://b2fn5knoj3pmq" path="res://assets/narrative/characters/main_character_two.png" id="3_8on1x"]
[ext_resource type="Texture2D" uid="uid://x4utwuqk2014" path="res://assets/narrative/characters/frat_bro.png" id="4_bma5j"]
[ext_resource type="AudioStream" uid="uid://cbtbt0kcujk3l" path="res://assets/audio/voice/gabeSample.wav" id="5_b5lyk"]
[ext_resource type="Script" uid="uid://cjetl0qsi6j01" path="res://scenes/text_scene_2.gd" id="5_kt1xl"]
[ext_resource type="Script" uid="uid://e70exscs0nxt" path="res://scripts/dialog_audio.gd" id="6_c0hyj"]

[sub_resource type="CanvasTexture" id="CanvasTexture_bma5j"]

[node name="NarrativeThree" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6ngg")

[node name="KitchenWide" type="Sprite2D" parent="."]
position = Vector2(538.5, 639.5)
scale = Vector2(1.05957, 0.832682)
texture = ExtResource("2_bma5j")

[node name="MainCharacter" type="Sprite2D" parent="."]
position = Vector2(241, 970)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_8on1x")

[node name="FratBro" type="Sprite2D" parent="."]
position = Vector2(728, 973)
scale = Vector2(0.65, 0.65)
texture = ExtResource("4_bma5j")
flip_h = true

[node name="DialogAudio" type="AudioStreamPlayer" parent="FratBro"]
stream = ExtResource("5_b5lyk")
script = ExtResource("6_c0hyj")
character_type = "frat_bro"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 322.0
offset_right = 966.0
offset_bottom = 496.0
texture = SubResource("CanvasTexture_bma5j")

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_kt1xl")

[node name="Label" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 530.0
offset_top = 319.0
offset_right = 954.0
offset_bottom = 486.0
theme_override_font_sizes/font_size = 32
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="Control"]

[connection signal="timeout" from="Control/Timer" to="Control" method="_on_Timer_timeout"]
