[gd_scene load_steps=10 format=3 uid="uid://b0s5dg4wpgcuw"]

[ext_resource type="Script" path="res://scenes/narrative_4.gd" id="1_8v6y4"]
[ext_resource type="Texture2D" uid="uid://ctrc2aqacldld" path="res://assets/narrative/kitchen_wide.png" id="2_8v6y4"]
[ext_resource type="Texture2D" uid="uid://b2fn5knoj3pmq" path="res://assets/narrative/characters/main_character_two.png" id="3_6hdb0"]
[ext_resource type="Texture2D" uid="uid://x4utwuqk2014" path="res://assets/narrative/characters/frat_bro.png" id="4_0xxwi"]
[ext_resource type="Texture2D" uid="uid://g5yvw20sy1ra" path="res://assets/narrative/items/mystical_object.png" id="4_8ggqk"]
[ext_resource type="AudioStream" uid="uid://cbtbt0kcujk3l" path="res://assets/audio/voice/gabeSample.wav" id="5_ix4d7"]
[ext_resource type="Script" uid="uid://e70exscs0nxt" path="res://scripts/dialog_audio.gd" id="6_jjn70"]
[ext_resource type="Script" uid="uid://cjetl0qsi6j01" path="res://scenes/text_scene_2.gd" id="6_tbgqo"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8v6y4"]

[node name="NarrativeFour" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8v6y4")

[node name="KitchenWide" type="Sprite2D" parent="."]
position = Vector2(538.5, 638.5)
scale = Vector2(1.05957, 0.833984)
texture = ExtResource("2_8v6y4")

[node name="MainCharacter" type="Sprite2D" parent="."]
position = Vector2(241, 970)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_6hdb0")

[node name="DialogAudio" type="AudioStreamPlayer" parent="MainCharacter"]
stream = ExtResource("5_ix4d7")
script = ExtResource("6_jjn70")

[node name="FratBro" type="Sprite2D" parent="."]
position = Vector2(728, 973)
scale = Vector2(0.65, 0.65)
texture = ExtResource("4_0xxwi")
flip_h = true

[node name="DialogAudio" type="AudioStreamPlayer" parent="FratBro"]
stream = ExtResource("5_ix4d7")
script = ExtResource("6_jjn70")
character_type = "frat_bro"

[node name="MysticalObject" type="Sprite2D" parent="."]
position = Vector2(861, 1170)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_8ggqk")

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_tbgqo")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 478.0
offset_top = 362.0
offset_right = 835.0
offset_bottom = 520.0
texture = SubResource("CanvasTexture_8v6y4")

[node name="Label" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 504.0
offset_top = 384.0
offset_right = 800.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 32
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="Control"]

[connection signal="timeout" from="Control/Timer" to="Control" method="_on_Timer_timeout"]
