[gd_scene load_steps=9 format=3 uid="uid://dnv3i4cl0oxut"]

[ext_resource type="Script" uid="uid://c0yua44easpeu" path="res://scenes/narrative_8.gd" id="1_go085"]
[ext_resource type="Texture2D" uid="uid://ctrc2aqacldld" path="res://assets/narrative/kitchen_wide.png" id="2_ipro4"]
[ext_resource type="Texture2D" uid="uid://garlhcligbug" path="res://assets/narrative/characters/main_character_eat.png" id="4_wiw72"]
[ext_resource type="Texture2D" uid="uid://cwdfs7f2tflts" path="res://assets/narrative/characters/frat_bro_shocked.png" id="5_go085"]
[ext_resource type="Texture2D" uid="uid://g5yvw20sy1ra" path="res://assets/narrative/items/mystical_object.png" id="5_i8iqk"]
[ext_resource type="Script" uid="uid://cjetl0qsi6j01" path="res://scenes/text_scene_2.gd" id="6_rsogp"]

[sub_resource type="CanvasTexture" id="CanvasTexture_2mf45"]

[sub_resource type="CanvasTexture" id="CanvasTexture_sxtgq"]

[node name="NarrativeEight" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_go085")

[node name="KitchenWide" type="Sprite2D" parent="."]
position = Vector2(538.5, 638.5)
scale = Vector2(1.05957, 0.833984)
texture = ExtResource("2_ipro4")

[node name="MainCharacterEat" type="Sprite2D" parent="."]
position = Vector2(251, 945)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_wiw72")

[node name="MysticalObject" type="Sprite2D" parent="."]
position = Vector2(278, 789)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_i8iqk")

[node name="FratBroShocked" type="Sprite2D" parent="."]
position = Vector2(749, 959)
scale = Vector2(0.65, 0.65)
texture = ExtResource("5_go085")
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 327.0
offset_right = 827.0
offset_bottom = 485.0
texture = SubResource("CanvasTexture_2mf45")

[node name="Label2" type="Label" parent="TextureRect3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.981
offset_bottom = 4.00198
theme_override_colors/font_color = Color(0.0313726, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "WAIT!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_rsogp")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 72.0
offset_top = 324.0
offset_right = 434.0
offset_bottom = 500.0
texture = SubResource("CanvasTexture_sxtgq")

[node name="Label" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 102.0
offset_top = 337.0
offset_right = 401.0
offset_bottom = 482.0
theme_override_font_sizes/font_size = 32
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="Control"]

[connection signal="timeout" from="Control/Timer" to="Control" method="_on_Timer_timeout"]
